[gd_scene load_steps=2 format=3 uid="uid://dpplf6swpwvpe"]

[ext_resource type="Script" path="res://Meldingsfiches_all.gd" id="1_67fqg"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_67fqg")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.682353, 0.458824, 0.678431, 1)

[node name="Button" type="Button" parent="."]
offset_left = 1085.0
offset_top = 17.0
offset_right = 1134.0
offset_bottom = 64.0

[node name="VScrollBar" type="VScrollBar" parent="."]
offset_left = 715.0
offset_right = 733.0
offset_bottom = 648.0
page = 10.0

[node name="fiches_btn_list" type="Node2D" parent="."]
position = Vector2(415, 0)

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="value_changed" from="VScrollBar" to="." method="_on_v_scroll_bar_value_changed"]
